完成站内信和账户相关功能--等前端页面
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10249 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/messege/messege.addpage.html
+++ b/App/View/messege/messege.addpage.html
@@ -73,7 +73,7 @@
                     layer.msg('操作成功！', {
                         time: 1000
                     }, function(){
-                        top.location.reload();
+                        parent.location.reload();
                     });
                 }else{
                     layer.msg(data.msg, {
