基本完成我的收益功能模块
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10447 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/internal/internal.delete.html
+++ b/App/View/internal/internal.delete.html
@@ -9,8 +9,8 @@
     <input type="hidden" name="saleId" id="saleId" value="<?=$saleId?>">
     <ul>
         <li><label>删除原因：</label>
-            <input type="radio" name="reason" class="reason" value="2">无效删除&nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="radio" name="reason" class="reason" value="1">交易成功
+            <input type="radio" name="reason" class="reason" value="2" checked="checked">无效删除&nbsp;&nbsp;&nbsp;&nbsp;
+            <!--<input type="radio" name="reason" class="reason" value="1">交易成功-->
         </li>        
         <li id="saleTime"><label>出售时间：</label><input type="text" name="saleDate" id="saleDate" readonly onclick="laydate()" /><em>(仅交易成功填写)</em></li>
        <li><label>剔除黑名单：</label>
