修改广告管理功能
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10573 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/exchange/exchange.index.html
+++ b/App/View/exchange/exchange.index.html
@@ -78,7 +78,7 @@
                 <tbody class="table-list">
                 <? foreach ($list as $k => $v) {  ?>
                 <tr>
-                    <td><?=$module_type[$v['pages']]['name']?> <?if(!empty($v['module'])) echo "-- ".$module_type[$v['pages']]['type'][$v['module']];?></td>
+                    <td><?=$module_type[$v['pages']]['name']?></td>
                     <td><?=$v['note']?></td>
                     <td><?=$v['date']?></td>
                     <?if($s['isUse']==1){?>
