--- a/App/View/messege/messege.addpage.html
+++ b/App/View/messege/messege.addpage.html
@@ -33,8 +33,8 @@
                 </li>
                 <li>
                     <label>是否需要详情：</label>
-                    <label><input type="radio" class="isNeed" name="type" value="1" checked="checked"/>需要(信类型)</label>
-                    <label><input type="radio" class="isNeed" name="type" value="2"/>不需要(链接类型)</label>
+                    <label><input type="radio" class="isNeed" name="type" value="1"/>需要(信类型)</label>
+                    <label><input type="radio" class="isNeed" name="type" value="2"  checked="checked"/>不需要(链接类型)</label>
                 </li>
                 <li>
                     <label>详情内容：</label>
