--- a/App/View/messege/messege.editpage.html
+++ b/App/View/messege/messege.editpage.html
@@ -66,6 +66,7 @@
     }
     $(function(){
         //选中事件
+        console.debug("<?=$monitor['url']?>---<?=$monitor['desc']?>");
         $('.url').val(["<?=$monitor['url']?>---<?=$monitor['desc']?>"]);
         $('.isNeed').val(["<?=$monitor['type']?>"]);
         //提交事件
