--- a/App/View/ad/ad.index.html
+++ b/App/View/ad/ad.index.html
@@ -68,7 +68,7 @@
                 <thead>
                     <tr class="active">
 			<th>序号</th>
-                        <th>当前有误展示广告</th>
+                        <th>当前有无展示广告</th>
                         <th>最终截止时间</th>
                         <th>有无草稿</th>
                         <th>操作</th>
