--- a/App/View/exchange/exchange.index.html
+++ b/App/View/exchange/exchange.index.html
@@ -87,11 +87,12 @@
                     <?}?>
                     <td><?=$v['phone']?></td>
                     <td><?=$v['qq']?></td>
-		    <td>
-			<a href="javascript:void(0);" onclick="setVerify(<?=$v['id']?>);">通过</a>
-			<a href="javascript:void(0);" onclick="delVerify(<?=$v['id']?>);">取消</a>
-		    </td>
-                    
+                    <?if($s['isUse']==3){?>
+                        <td>
+                        <a href="javascript:void(0);" onclick="setVerify(<?=$v['id']?>);">通过</a>
+                        <a href="javascript:void(0);" onclick="delVerify(<?=$v['id']?>);">取消</a>
+                        </td>
+                    <?}?>
                 </tr>
                 <? } ?>
                 </tbody>
