改了选择框
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10710 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/messege/messege.addpage.html
+++ b/App/View/messege/messege.addpage.html
@@ -33,12 +33,14 @@
                 </li>
                 <li>
                     <label>是否需要详情：</label>
-                    <label><input type="radio" class="isNeed" name="type" value="1"/>需要</label>
-                    <label><input type="radio" class="isNeed" name="type" value="2"  checked="checked"/>不需要</label>
+                    <label><input type="radio" class="isNeed need" name="type" value="1"/>需要</label>
+                    <label><input type="radio" class="isNeed no-need" name="type" value="2"  checked="checked"/>不需要</label>
                 </li>
                 <li>
                     <label></label>
-                    <textarea name="content" id="content" style="width:80%;height:200px;"></textarea><br/>(链接类型可不填此项,代表仅标题)
+                    <div id="ch-text">
+                        <textarea name="content" id="content" style="width:80%;height:200px;"></textarea><br/>(链接类型可不填此项,代表仅标题)
+                    </div>
                 </li>
             </ul>
         </div>
@@ -53,6 +55,13 @@
 <script charset="utf-8" src="<?=StaticDir?>/editor/kindeditor.js"></script>
 <script charset="utf-8" src="<?=StaticDir?>/editor/lang/zh_CN.js"></script>
 <script type="text/javascript">
+    if($(".need").attr("checked")==true){
+       $("#ch-text").html('<textarea name="content" id="content" style="width:80%;height:200px;"></textarea><br/>(链接类型可不填此项,代表仅标题)');
+    }
+    if($(".no-need").attr("checked")==true){
+        $("#ch-text").html(' <input type="text" style="width:80%;height:30px;"/><br/>(链接类型可不填此项,代表仅标题)');
+    }
+
     //富文本编辑器
     KindEditor.ready(function(K) {
         window.editor = K.create('#content', {
