git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10714 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/ad/ad.pic.html
+++ b/App/View/ad/ad.pic.html
@@ -63,7 +63,7 @@
          <div class="pics" style="width:200px;">
             <button type="button" onclick="delAd(<?=$info[0]['id']?>)" class="btn btn-warning">&nbsp;&nbsp;&nbsp;&nbsp;删除&nbsp;&nbsp;&nbsp;&nbsp;</button>
             <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
-            <?=$info[0]['isUse']==2?$info[0]['note']:'';?>
+            <?=$info[0]['note'];?>
             </div>
          </div>
     </div>
