--- a/App/View/ad/ad.pic.html
+++ b/App/View/ad/ad.pic.html
@@ -85,7 +85,7 @@
         
          <div class="pics" style="width:200px;">
             <div class="alert alert-warning" style="padding:2px;margin-bottom:10px;margin-top:10px;" role="alert">
-            <?=$info[1]['isUse']==2?$info[1]['note']:'';?>
+            <?=$info[1]['note'];?>
             </div>
          </div>
     </div>
