修改商标导出功能多联系人BUG，限制条数为5000条
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10811 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/exchange/exchange.index.html
+++ b/App/View/exchange/exchange.index.html
@@ -152,7 +152,7 @@ function setVerify(id)
                 }
             },
             error : function (data){
-                layer.msg('操作失败，请检查您输入的内容是否正确后重新尝试。', {
+                layer.msg('操作失败,请联系管理员', {
                     time: 2000 //2秒关闭（如果不配置，默认是3秒）
                 });
             }
