修改回滚冲突，兑换文字显示信息
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10962 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/exchange/exchange.index.html
+++ b/App/View/exchange/exchange.index.html
@@ -40,7 +40,7 @@
                     <option value="3" <?if($s['pages']==3){echo 'selected';} ?>>列表页右侧</option>
                 </select>
                 
-                <label> 申请时间<?=$s['dateStart']?>：</label><input type="text" name="dateStart" value="<?=$s['dateStart']?>" class="input input-sm" readonly onclick="laydate()" /> 
+                <label> 申请时间：</label><input type="text" name="dateStart" value="<?=$s['dateStart']?>" class="input input-sm" readonly onclick="laydate()" /> 
                 <label>&nbsp;&nbsp;-&nbsp;&nbsp;</label> <input type="text" name="dateEnd" value="<?=$s['dateEnd']?>" class="input input-sm" readonly onclick="laydate()" />
                 
                 <label>联系电话：</label> <input type="text" name="phone" value="<?=$s['phone']?>" class="input input-sm"/> 
