git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@11179 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/messege/messege.addpage.html
+++ b/App/View/messege/messege.addpage.html
@@ -39,7 +39,7 @@
                 <li>
                     <label></label>
                     <div id="ch-text">
-                        <textarea name="content" id="content" style="width:80%;height:200px;"></textarea><br/>(链接类型可不填此项,代表仅标题)
+                        <textarea name="content" id="content" style="width:80%;height:200px;"></textarea><br/>
                     </div>
                 </li>
             </ul>
