--- a/App/View/messege/messege.editpage.html
+++ b/App/View/messege/messege.editpage.html
@@ -38,7 +38,7 @@
                 </li>
                 <li>
                     <label></label>
-                    <textarea name="content" id="content" style="width:80%;height:200px;"><?=$monitor['content']?></textarea><br/>(链接类型可不填此项,代表仅标题)
+                    <textarea name="content" id="content" style="width:80%;height:200px;"><?=$monitor['content']?></textarea><br/>
                 </li>
             </ul>
             <input type="hidden" name="id" value="<?=$monitor['id']?>">
