git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@11181 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/messege/messege.editpage.html
+++ b/App/View/messege/messege.editpage.html
@@ -33,12 +33,12 @@
                 </li>
                 <li>
                     <label>是否需要详情：</label>
-                    <label><input type="radio" class="isNeed" name="type" value="1"/>需要</label>
+                    <!--<label><input type="radio" class="isNeed" name="type" value="1"/>需要</label>-->
                     <label><input type="radio" class="isNeed" name="type" value="2" checked="checked"/>不需要</label>
                 </li>
                 <li>
                     <label></label>
-                    <textarea name="content" id="content" style="width:80%;height:200px;"><?=$monitor['content']?></textarea><br/>
+                    <textarea name="content" id="content" style="width:80%;height:200px;"><?=$monitor['content']?></textarea><br/>(此处仅可输入链接，如无需链接则将其置空即可。)
                 </li>
             </ul>
             <input type="hidden" name="id" value="<?=$monitor['id']?>">
