--- a/App/View/messege/messege.addpage.html
+++ b/App/View/messege/messege.addpage.html
@@ -33,13 +33,13 @@
                 </li>
                 <li>
                     <label>是否需要详情：</label>
-                    <label><input type="radio" class="isNeed need" name="type" value="1"/>需要</label>
+                    <!--<label><input type="radio" class="isNeed need" name="type" value="1"/>需要</label>-->
                     <label><input type="radio" class="isNeed no-need" name="type" value="2"  checked="checked"/>不需要</label>
                 </li>
                 <li>
                     <label></label>
                     <div id="ch-text">
-                        <textarea name="content" id="content" style="width:80%;height:200px;"></textarea><br/>
+                        <textarea name="content" id="content" style="width:80%;height:200px;"></textarea><br/>(此处仅可输入链接，如无需链接则将其置空即可。)
                     </div>
                 </li>
             </ul>
